testing/Travis/testcases/prototype/shouldSucceed/ARM_Test10.adl
CONTEXT ARMTest10 IN DUTCH -- (project ARMisa)
CLASSIFY Verplichting ISA Criterium
CLASSIFY Verwachting ISA Criterium
CLASSIFY Gewetensvraag IS Verplichting /\ Verwachting
CLASSIFY Gewetensvraag ISA Criterium
RELATION critText[Criterium*Blob] [MAP]
RELATION afdekking[Criterium*Verwachtingsverzameling] [UNI]
RELATION vvVerwachting[Verwachtingsverzameling*Criterium]
INTERFACE Gewetensvraag : I[Gewetensvraag]
BOX[ afdekking : afdekking
BOX[ gewetensvragen: vvVerwachting;I[Gewetensvraag]
BOX[ gewetensvraag: I
, criterium : critText
]
]
]
ENDCONTEXT
